--- a/kiemtra_html_css/css/style.css
+++ b/kiemtra_html_css/css/style.css
@@ -6,7 +6,7 @@
 }
 body{
 	font-family: sans-serif;
-	/*background-color: #000;*/
+	font-family: 'Questrial', sans-serif;
 }
 a{
 	text-decoration: none;
@@ -112,7 +112,7 @@ img {
 	background: #5f5a5a94;
 }
 img:hover{
-	/*opacity: 0.5;*/
+	
 	transform: scale(1.1,1.1);
 }
 .text:hover {
