--- a/kiemtra_html_css/tt/stylett.css
+++ b/kiemtra_html_css/tt/stylett.css
@@ -6,7 +6,7 @@
 }
 
 body{
-	font-family: sans-serif;
+	font-family: 'Questrial', sans-serif;
 }
 a{
 	text-decoration: none;
@@ -130,4 +130,29 @@ li{
    background-color: #3e3b3bad;
     color: #fff;
   border-left: 2px solid #fff;
+}
+table{
+	background: #3e3b3bad;
+	margin-top: 10px;
+	/*padding-top: 55px;*/
+	margin: 0 auto;
+
+}
+#ketqua{
+	width: 258px;
+	height: 31px;
+}
+.btn1{
+	width: 50px;
+	height: 50px;
+	font-size: 15px;
+}
+h3{
+	color: black;
+}
+div h3 {
+	margin-left: 50%;
+	margin-right: 50%;
+	background-color: #3e3b3bad;
+	width: 100px;
 }
